deployment/aks/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-nsth-room-reservation
  namespace: nsthdso
spec:
  selector:
    matchLabels:
      app: demo-nsth-room-reservation
  template:
    metadata:
      labels:
        app: demo-nsth-room-reservation
    spec:
      automountServiceAccountToken: false
      containers:
      - name: demo-nsth-room-reservation
        image: nsthdso.azurecr.io/nsth-room-reservation:latest
        resources:
          limits:
            memory: "64Mi"
            cpu: "250m"
        ports:
        - containerPort: 80
          protocol: TCP
