deployment/aks/service.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-nsth-room-reservation
  namespace: nsthdso
spec:
  selector:
    app: demo-nsth-room-reservation
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
