deployment/aks/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: room-reservation.dev-aks.nsth.net
  namespace: nsthdso
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - room-reservation.dev-aks.nsth.net
      secretName: tls-secret
  rules:
    - host: room-reservation.dev-aks.nsth.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-nsth-room-reservation-svc
                port:
                  number: 80
